--- a/.github/workflows/main_facilityleasing.yml
+++ b/.github/workflows/main_facilityleasing.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - facilityleasing
+name: Build and deploy ASP.Net Core app to Azure Web App - FacilityLeasing.API
 
 on:
   push:
@@ -19,19 +19,19 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.x'
+          dotnet-version: '9.x' 
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
+      - name: Build FacilityLeasing.API
+        run: dotnet build FacilityLeasing.API/FacilityLeasing.API.csproj --configuration Release
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      - name: Publish FacilityLeasing.API
+        run: dotnet publish FacilityLeasing.API/FacilityLeasing.API.csproj -c Release -o ${{github.workspace}}/output
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          name: api-artifact
+          path: ${{github.workspace}}/output
 
   deploy:
     runs-on: ubuntu-latest
@@ -44,13 +44,13 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
+          name: api-artifact
       
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'facilityleasing'
-          slot-name: 'Production'
-          package: .
+          slot-name: 'Production' 
+          package: ${{github.workspace}}/output
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B3CB186CCBF7469E9867F092388C64D0 }}
