--- a/.github/workflows/main_facilityleasing.yml
+++ b/.github/workflows/main_facilityleasing.yml
@@ -19,10 +19,10 @@ jobs:
           dotnet-version: '9.x'
 
       - name: Build FacilityLeasing.API
-        run: dotnet build FacilityLeasing/FacilityLeasing.API/FacilityLeasing.API.csproj --configuration Release
+        run: dotnet build FacilityLeasing.API/FacilityLeasing.API.csproj --configuration Release
 
       - name: Publish FacilityLeasing.API
-        run: dotnet publish FacilityLeasing/FacilityLeasing.API/FacilityLeasing.API.csproj -c Release -o ./output
+        run: dotnet publish FacilityLeasing.API/FacilityLeasing.API.csproj -c Release -o ./output
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
