--- a/.github/workflows/main_facilityleasing.yml
+++ b/.github/workflows/main_facilityleasing.yml
@@ -22,7 +22,9 @@ jobs:
         run: dotnet build FacilityLeasing.API/FacilityLeasing.API.csproj --configuration Release
 
       - name: Publish FacilityLeasing.API
-        run: dotnet publish FacilityLeasing.API/FacilityLeasing.API.csproj -c Release -o ./output
+        run: |
+          dotnet publish FacilityLeasing.API/FacilityLeasing.API.csproj -c Release -o ./output
+          ls -la ./output 
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -42,7 +44,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: api-artifact
-      
+
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
