--- a/.github/workflows/main_facilityleasing.yml
+++ b/.github/workflows/main_facilityleasing.yml
@@ -9,28 +9,25 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
-
+      
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '9.x'
-
+          
       - name: Build FacilityLeasing.API
         run: dotnet build FacilityLeasing.API/FacilityLeasing.API.csproj --configuration Release
-
+        
       - name: Publish FacilityLeasing.API
-        run: |
-          dotnet publish FacilityLeasing.API/FacilityLeasing.API.csproj -c Release -o ./output
-          ls -la ./output 
-
+        run: dotnet publish FacilityLeasing.API/FacilityLeasing.API.csproj -c Release -o ./output
+        
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: api-artifact
-          path: ./output
+          path: output
 
   deploy:
     runs-on: ubuntu-latest
@@ -44,12 +41,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: api-artifact
-
+          
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'facilityleasing'
           slot-name: 'Production'
-          package: ./output
+          package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B3CB186CCBF7469E9867F092388C64D0 }}
